<resources>
    <string name="app_name">Chatty</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="last_message_was_sent_from">Last message was sent from:</string>
    <string name="type_a_message">Type a message</string>
</resources>