<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/upWave"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="-11dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:maxWidth="292dp"
        android:src="@drawable/up_wave" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_below="@id/upWave"
        android:layout_height="wrap_content"
        android:src="@drawable/chatty"
        android:adjustViewBounds="true"
        android:layout_marginTop="50dp"
        android:maxWidth="192dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/usernameInput"
        android:autofillHints=""
        android:layout_below="@id/logo"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:layout_height="56dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_below="@id/usernameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_marginBottom="30dp"
        android:layout_height="56dp"
        android:layout_below="@id/emailInput"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_below="@id/passwordInput"
        android:text="@string/register"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/downWave"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_below="@id/registerBtn"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="-206dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/down_wave" />

</RelativeLayout>